--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Basic Nav Example</title>
 </head>
 <body>
-    <nav>
+    <nav aria-label="primary">
         <a href="#">
             <picture>
                 <!-- SVG version for all scenarios due to scalability and efficiency -->
@@ -30,8 +30,26 @@
             <li id="last-item"><a href="./pages/contact.html">Contact</a></li>
         </ul>
     </nav>
-    <header>
-        <h1 style="text-align: center;">My Webpage</h1>
-    </header>
+    <main>
+      <header>
+          <h1 style="text-align: center;">My Webpage</h1>
+      </header>
+      <div id="main">
+        <p></p>
+      </div>
+      <footer>
+        <nav aria-label="footer">
+          <ul>
+            <li><a href="">FAQ</a></li>
+            <li><a href="">Terms</a></li>
+            <li><a href="">Privacy</a></li>
+            <li><a href="">Cookies</a></li>
+          </ul>
+        </nav>
+        <p>
+          &copy; 2024 My Website
+        </p>
+      </footer>
+    </main>
 </body>
 </html>
