contact.html modified

--- a/pages/contact.html
+++ b/pages/contact.html
@@ -30,8 +30,27 @@
             <li id="last-item"><a href="#" id="current-page">Contact</a></li>
         </ul>
     </nav>
-    <header>
-        <h1 style="text-align: center;">Contact Page</h1>
-    </header>
+		<main>
+			<header>
+					<h1 style="text-align: center;">Contact Page</h1>
+			</header>
+			<div id="main">
+				<p></p>
+			</div>
+			<footer>
+					<nav aria-label="footer">
+						<ul>
+							<li><a href="">FAQ</a></li>
+							<li><a href="">Terms</a></li>
+							<li><a href="">Privacy</a></li>
+							<li><a href="">Cookies</a></li>
+						</ul>
+					</nav>
+					<p>
+						&copy; 2024 My Website
+					</p>
+			</footer>
+		</main>
+
 </body>
 </html>
